--- a/styles.css
+++ b/styles.css
@@ -174,3 +174,59 @@ main section:nth-child(3){
     }
 }
 
+/*game*/
+
+.game-board {
+    width: 98%;
+    height: 500px;
+    border: 1px solid greenyellow;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+}
+.Ghost {
+    position: absolute;
+    bottom: 0;
+    width: 120px;
+    animation: Ghost-movi 2s infinite linear;
+
+}
+
+.samurai {
+    position: absolute;
+    bottom: 0;
+    width: 120px;
+   
+}
+.jump{
+    animation: Samurai-jump 500ms ease-out;
+
+}
+
+@keyframes Ghost-movi {
+    from {
+        right: -120px;
+    }
+    to {
+        right: 100%;
+    }
+}
+
+@keyframes Samurai-jump {
+    0%{
+        bottom: 0;
+    }
+    40%{
+        bottom: 150px;
+    }
+    50%{
+        bottom: 150px;
+    }
+    65%{
+        bottom: 150px;
+
+    }
+    100%{
+        bottom: 0;
+    }
+}
